--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,15 @@
         text-align: center;
         margin-top: 30px;
         }
+    .dark-mode {
+            background-color:#222;
+            color:white;
+    }
+    .hidden {
+        display:none;
+    }
+   
+    
                     
             
        
